image uploading done.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
     "cloudinary": "^2.0.1",
+    "cloudinary-react": "^1.8.1",
     "emoji-mart": "^5.5.2",
     "firebase": "^9.22.2",
     "framer-motion": "^10.12.12",
