--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Pranav Patil",
+  "author": "",
   "license": "ISC",
   "description": ""
 }
